# AAS-Stegano-Trace

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
aas_stegano_trace/: __init__.py  __main__.py
docs/: REVIEW_DEBUG_GUIDE.md  TECHNICAL_DETAILS.md
examples/: industrial_motor.json  minimal_aas.json
src/: __init__.py  __main__.py  aas_injector.py  aas_tracer.py  cli.py  stegano_core.py
tests/: __init__.py  test_aas_stegano_trace.py
